--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
   font: 1em TimesNewRoman;
   border: 1in;
+  word-wrap: break-word;
+  width: 1000px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 150px;
+  margin-left: 80px;
 }
 
 .App-logo {
